# ais-project

./: CMakeLists.txt  README.md  Readme.md  ci_trigger.txt  detect_goal.py  drone_localization.py  drone_locolaization.py  kalman_filter.hpp  requirements.txt  test_kalman_filter.cpp  transform_tree.py
.github/workflows/: cpp-tests.yml  python-tests.yml
cpp/: CMakeLists.txt  kalman_example.cpp  kalman_filter.cpp
tests/: test_detect_goal.py  test_kalman_filter.cpp  test_transform_tree.py
